<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <TextView
        android:id="@+id/AvailableMoneyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/available_money"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/AvailableMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AvailableMoneyTitle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/_190_000"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/TotalMoneySpentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AvailableMoney"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/total_money_spent"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/TotalMoneySpent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TotalMoneySpentTitle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/_30_000"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/MoneySpentTodayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TotalMoneySpent"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/money_spent_today"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/MoneySpentToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MoneySpentTodayTitle"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/_5_000"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/AddTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MoneySpentToday"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/add_transaction"
        />

</RelativeLayout>